2006-08-20  Brian Warner  <warner@lothar.com>

	* buildbot/changes/pb.py (PBChangeSource): fix and simplify
	meaning of the prefix= argument. It is now just a string which is
	stripped from the beginning of the filename. If prefix= is set but
	not found on any given filename, that filename is ignored. If all
	filenames in a Change are ignored, the Change is dropped. This is
	much simpler than the previous sep= nonsense, and I should have
	implemented it this way from the beginning. Effectively resolves
	SF#1217699 and SF#1381867. Thanks to Gary Granger and Marius
	Gedminas for the catch and suggested fixes.
	(ChangePerspective.perspective_addChange): implement the actual
	prefix comparison
	* buildbot/test/test_changes.py (TestChangePerspective): test it
	* docs/buildbot.texinfo (PBChangeSource): document it, explain
	how to properly use prefix=
	* docs/examples/twisted_master.cfg (source): update prefix= by
	adding the trailing slash


	* docs/examples/twisted_master.cfg: update to actual practice

	* buildbot/test/test_web.py (WaterfallSteps.test_urls): oops,
	update test case to match new link text.. the HREF has both a
	class= setting and an enclosing [] pair that I didn't match in the
	test.

	* docs/buildbot.texinfo (ShellCommand.command=): explain why a
	list of strings is preferred over a single string with embedded
	spaces
	(ShellCommand.description=): explain that either single strings or
	a list of strings is acceptable, and why you might prefer one over
	the other. Add an example. Fixes SF#1524659, thanks to Paul
	Winkler for the catch.
	(Build Steps): update to use f.addStep() rather than using s()
	and the constructor list

	* buildbot/process/step.py (ShellCommand): accept either a single
	string or a list of strings in both description= and
	descriptionDone=
	* buildbot/test/test_steps.py (Steps.test_description): test it
	* buildbot/test/runutils.py (makeBuildStep): support for that test
